archive/toobfuzzer3/blueprints/esp32/run_52/terminal_output.txt
[GENERATE] Blueprint 52 successfully persisted to C:\Users\Robin\Desktop\Toob-Loader\toobfuzzer3\blueprints\esp32\run_52\blueprint.json
[GENERATE] Confidence matrix saved to C:\Users\Robin\Desktop\Toob-Loader\toobfuzzer3\blueprints\esp32\run_52\confidence.json

[PING PHASE] [COMPILE] Invoking Universal Toolchain Runner for esp32...
[PING PHASE] [*] Compiling JSON Blueprint to Toolchain Syntax & C Profiles...
[*] Generated Linker Script: C:\Users\Robin\Desktop\Toob-Loader\toobfuzzer3\build\esp32\run_latest\esp32.ld
[*] Generated Startup Assembly: C:\Users\Robin\Desktop\Toob-Loader\toobfuzzer3\build\esp32\run_latest\esp32_startup.S
[*] Generated Capabilities Shim: C:\Users\Robin\Desktop\Toob-Loader\toobfuzzer3\build\esp32\run_latest\capabilities_esp32.c
[*] Generated True SPI Flash HAL: C:\Users\Robin\Desktop\Toob-Loader\toobfuzzer3\build\esp32\run_latest\hal_flash_esp32.c
[*] Emitted: esp32.ld | esp32_startup.S | capabilities_esp32.c
[*] ToolLocator loaded 81 custom paths (max_depth=6) from user_tools.json

=== STAGE 1: COMPILATION ===
[*] Preparing execution for: xtensa-esp32-elf-gcc
[*] Tool 'xtensa-esp32-elf-gcc' not in PATH. Searching common vendor directories (Max Depth: 6)...
    [+] Found at: C:\Espressif\tools\xtensa-esp-elf\esp-14.2.0_20251107\xtensa-esp-elf\bin\xtensa-esp32-elf-gcc.exe
    [>] Executing: "C:\Espressif\tools\xtensa-esp-elf\esp-14.2.0_20251107\xtensa-esp-elf\bin\xtensa-esp32-elf-gcc.exe" -O2 -nostdlib -ffreestanding -mlongcalls -DHAS_TRUE_SPI_HAL=1 -T build/esp32/run_latest/esp32.ld -I core/ -I arch/ -I build/esp32/run_latest/ -I build/esp32/run_latest/ -o build/esp32/run_latest/toobfuzzer.bin.elf core\detect_profile.c core\fuzzer_main.c core\logger.c core\prober_core.c  hal\hal_uart.c mocks\hal_mock.c build/esp32/run_latest/capabilities_esp32.c build/esp32/run_latest/esp32_startup.S build/esp32/run_latest/keelhaul_svd.c build/esp32/run_latest/hal_flash_esp32.c
    [!] Execution Failed (Exit 1)
    [!] STDERR: build/esp32/run_latest/hal_flash_esp32.c: In function 'chip_flash_write32':
build/esp32/run_latest/hal_flash_esp32.c:31:28: error: 'sector_addr' undeclared (first use in this function)
   31 |     esp_rom_spiflash_write(sector_addr, &data_word, 4);
      |                            ^~~~~~~~~~~
build/esp32/run_latest/hal_flash_esp32.c:31:28: note: each undeclared identifier is reported only once for each function it appears in
build/esp32/run_latest/hal_flash_esp32.c:31:42: error: 'data_word' undeclared (first use in this function)
   31 |     esp_rom_spiflash_write(sector_addr, &data_word, 4);
      |                                          ^~~~~~~~~
[!] Compilation Failed.
    [?] To trigger the AI Self-Healing loop, implement error parsing here.
[*] Restarting application...
